# IZ2

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  cmake_install.cmake  gtest.cpp  is_capital.c  linear_search.c  linear_search.h  main.c  parallel_search.c
headers/: is_capital.h  libhead.h  linear_search.h  parallel_search.h
lib/: googletest-distribution.cbp  library.json
lib/googlemock/: gmock.cbp
lib/googletest/: gtest.cbp
